--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: History-of-the-United-Netherlands-from-the-Death-of-William-the-Silent-to-the-Twelve-Year-s-Tr__4883
+_version: 0.1.0
 creator:
   author:
     agent_name: Motley, John Lothrop
