--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: History-of-the-United-Netherlands-from-the-Death-of-William-the-Silent-to-the-Twelve-Year-s-Tr__4883
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Motley, John Lothrop
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1583
     wikipedia: http://en.wikipedia.org/wiki/John_Lothrop_Motley
 description: I. 1554-86. -- II. 1586-89. -- III. 1590-1600. -- IV. 1600-09.
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/4883#History-of-the-United-Netherlands-from-the-Death-of-William-the-Silent-to-the-Twelve-Year-s-Tr_
 gutenberg_issued: '2004-01-01'
 gutenberg_type: Text
 identifiers:
